log
Fri May  1 05:57:35 PM UTC 2026: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/60
17e4dd0
Fri May  1 06:13:11 PM UTC 2026: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:75:29: error: expected ‘;’ before ‘}’ token
   75 |             aux = aux->right
      |                             ^
      |                             ;
   76 |         }
      |         ~                    
9de06a6
Fri May  1 06:13:27 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/60
d7649f9
Fri May  1 06:33:46 PM UTC 2026: 
 treemap.c | 33 ++++++++++++++++++++++++++++++++-
 1 file changed, 32 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:88:16: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   88 |         return NULL;
      |                ^~~~
treemap.c:86:6: note: declared here
   86 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
d7d6628
Fri May  1 06:35:16 PM UTC 2026: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  13|5
total_score: 25/60
6b2df6c
